--- a/Kube/dev/hello-node.yaml
+++ b/Kube/dev/hello-node.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: aks-hellonode
-        image: sina.azurecr.io/aks-web:#{Release.Artifacts.aks.BuildNumber}#
+        image: sina.azurecr.io/helloworldnode:#{Release.Artifacts.aks.BuildNumber}#
         env:
         - name: ASPNETCORE_ENVIRONMENT
           value: "Development"        
