--- a/AKS/Services/HelloNode/Dockerfile
+++ b/AKS/Services/HelloNode/Dockerfile
@@ -4,11 +4,11 @@ WORKDIR /app
 # Install NPM packages
 COPY Services/HelloNode/package*.json /app/
 RUN npm set progress=true
-RUN npm cache clean --force
+#RUN npm cache clean --force
 RUN npm install
 
 # Copy Angular source code to app folder
 COPY Services/HelloNode /app/
 
-EXPOSE 30002
+EXPOSE 80
 CMD [ "node", "server.js" ]
